@@ -1,4 +1,6 @@
 2008-??-??
+Added ... to diffreport to pass optional parameters to mt.teststat
+Added value = c("into","maxo","intb") parameter to diffreport
 Added warning if non-unique scantimes are detected to xcmsRaw()
 rawEIC() verifies the scanrange  
 findPeaks.centWave generates a warning if data seems to be not in centroid mode
